--- a/views/usermanagement.ejs
+++ b/views/usermanagement.ejs
@@ -11,142 +11,113 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
     crossorigin="anonymous"></script>
-    <!-- Add this line in the head of your HTML document to load jQuery from a CDN -->
-<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <!-- Add this line in the head of your HTML document to load jQuery from a CDN -->
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
   <link rel="stylesheet" href="/css/style.css">
 </head>
 
-<body>
+<body style="background-color: white;">
   <%- include('navbar') %>
-
-    <div class="card">
-      <div class="table-responsive">
-        <table class="table align-items-center mb-0">
-          <% if (usermanage.length> 0) { %>
-            <thead>
-              <tr>
-                <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">User ID</th>
-                <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 ps-2">Image</th>
-                <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 ps-2">Username</th>
-                <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 ps-2">Email</th>
-                <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 ps-2">status</th>
-                <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 ps-2">Ban</th>
-                <th></th>
-              </tr>
-            </thead>
-            <tbody>
-              <% usermanage.forEach((user)=> { %>
+    <div class="container-fluid " style="background-color: white;height: 100vh;">
+      <div class="card container mt-5" style="background-color: white;">
+        <div class="table-responsive">
+          <table class="table align-items-center mb-0">
+            <% if (usermanage.length> 0) { %>
+              <thead>
                 <tr>
-                  <td>
-                    <div class="d-flex px-2">
-                      <div>
-                        <%= user.id_user %>
+                  <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">User ID</th>
+                  <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 ps-2">Image</th>
+                  <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 ps-2">Username</th>
+                  <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 ps-2">Email</th>
+                  <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 ps-2">status</th>
+                  <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 ps-2">Ban</th>
+                  <th></th>
+                </tr>
+              </thead>
+              <tbody>
+                <% usermanage.forEach((user)=> { %>
+                  <tr>
+                    <td>
+                      <div class="d-flex px-2">
+                        <div>
+                          <%= user.id_user %>
+                        </div>
                       </div>
-                    </div>
-                  </td>
-                  <td>
-                    <img src="/image/<%= user.image %>" class="avatar avatar-sm rounded-circle me-2">
+                    </td>
+                    <td>
+                      <img src="/image/<%= user.image %>" class="avatar avatar-sm rounded-circle me-2">
 
-                  </td>
+                    </td>
 
-                  <td class="align-middle text-center">
-                    <div class="d-flex align-items-center">
-                      <b>
-                        <%= user.username %>
-                      </b>
-                    </div>
-                  </td>
+                    <td class="align-middle text-center">
+                      <div class="d-flex align-items-center">
+                        <b>
+                          <%= user.username %>
+                        </b>
+                      </div>
+                    </td>
 
-                  <td class="align-middle text-center">
-                    <div class="d-flex align-items-center">
-                      <span class="me-2 ">
-                        <%= user.email %>
-                      </span>
-                    </div>
-                  </td>
-                  <td class="align-middle text-center">
-                    <div class="d-flex align-items-center">
-                      <span class="me-2 text-xs">
-                        <%= user.status %>
-                      </span>
-                    </div>
-                  </td>
+                    <td class="align-middle text-center">
+                      <div class="d-flex align-items-center">
+                        <span class="me-2 ">
+                          <%= user.email %>
+                        </span>
+                      </div>
+                    </td>
+                    <td class="align-middle text-center">
+                      <div class="d-flex align-items-center">
+                        <span class="me-2 text-xs">
+                          <%= user.status %>
+                        </span>
+                      </div>
+                    </td>
 
-                  <td class="align-middle text-center">
-                    <div class="d-flex align-items-center form-check form-switch">
-                      <input class="form-check-input" type="checkbox" id="status-toggle-<%= user.id_user %>"
-                        <%=user.status==='active' ? 'checked' : '' %> onchange="toggleStatus('<%= user.id_user %>')">
-
-
-                    </div>
-                  </td>
-
-                  <!-- <form action="/admin/ban/<%= user.id_user %>" method="post" id="banForm">
-                              <input type="hidden" name="id" value="<%= user.id_user %>">
-                            </form> -->
-                  <!-- <button type="submit" name="action" class="btn btn-outline-danger" value="ban">Ban User</button> -->
-                  <!-- <form action="/admin/unban/<%=  user.id_user %>" method="post" id="unbanForm">
-                              <input type="hidden" name="id" value="<%= user.id_user %>">
-                            </form> -->
-                  <!-- <button type="submit" name="action" class="btn btn-outline-dark" value="unban">Unban User</button> -->
+                    <td class="align-middle text-center">
+                      <div class="d-flex align-items-center form-check form-switch">
+                        <input class="form-check-input" type="checkbox" id="status-toggle-<%= user.id_user %>"
+                          <%=user.status==='active' ? 'checked' : '' %> onchange="toggleStatus('<%= user.id_user %>')">
 
 
+                      </div>
+                    </td>
+                    <script>
+                      var userStatus = '<%= user.status %>';
 
-                  <script>
-                    var userStatus = '<%= user.status %>';
+                      if (userStatus === 'active') {
+                        var toggleCheckbox = document.getElementById('status-toggle-<%= user.id_user %>');
+                        toggleCheckbox.checked = true;
+                      }
+                      function toggleStatus(userId) {
+                        var toggleCheckbox = document.getElementById('status-toggle-' + userId);
+                        var classStatus = toggleCheckbox.checked ? 'active' : 'banned';
 
-                    if (userStatus === 'active') {
-                      var toggleCheckbox = document.getElementById('status-toggle-<%= user.id_user %>');
-                      toggleCheckbox.checked = true;
-                    }
+                        console.log('classStatus:', classStatus);
 
-                    // const banForm = document.getElementById("banForm");
-                    // const unbanForm = document.getElementById("unbanForm");
-                    function toggleStatus(userId) {
-                      var toggleCheckbox = document.getElementById('status-toggle-' + userId);
-                      var classStatus = toggleCheckbox.checked ? 'active' : 'banned';
-
-                      console.log('classStatus:', classStatus);
-
-                      // Make AJAX request to update class status
-                      $.ajax({
-                        url: "/admin/updateStatus/" + userId, // Update the AJAX URL
-                        method: 'POST',
-                        data: {
-                          userId: userId, // Pass userId ID
-                          status: classStatus
-                        },
-                        success: function (response) {
-                          console.log('สถานะของคลาสถูกอัปเดตแล้ว');
-                          location.reload();
-                        },
-                        error: function (xhr, status, error) {
-                          console.error('เกิดข้อผิดพลาดในการอัปเดตสถานะของคลาส:', error);
-                        }
-                      });
-                  }
-                  </script>
-
-
-                  <% }); %>
-            </tbody>
-            <% } %>
-        </table>
+                        // Make AJAX request to update class status
+                        $.ajax({
+                          url: "/admin/updateStatus/" + userId, // Update the AJAX URL
+                          method: 'POST',
+                          data: {
+                            userId: userId, // Pass userId ID
+                            status: classStatus
+                          },
+                          success: function (response) {
+                            console.log('สถานะของคลาสถูกอัปเดตแล้ว');
+                            location.reload();
+                          },
+                          error: function (xhr, status, error) {
+                            console.error('เกิดข้อผิดพลาดในการอัปเดตสถานะของคลาส:', error);
+                          }
+                        });
+                      }
+                    </script>
+                    <% }); %>
+              </tbody>
+              <% } %>
+          </table>
+        </div>
       </div>
     </div>
-
-
-
-
-
-
-
-
-
-
-
-
 </body>
-
 </html>
