fix: myrouter user changepass detail forgetall index jobgetalljob send updatejob

--- a/views/detailjob.ejs
+++ b/views/detailjob.ejs
@@ -35,7 +35,7 @@
 
     <div class="container-fluid mb-5">
       <div class="pt-5 ps-5">
-        <h6 class="label-profile3 text-dark-50">Detail</h6>
+        <h6 class="label-profile3 text-dark-50"></h6>
         </div>
         <div class="row" style="justify-content:center ;">
           <div class="col-3  p-4 border bg-light" style="margin-top:1vh ;">
