--- a/views/jobsendcard.ejs
+++ b/views/jobsendcard.ejs
@@ -2,7 +2,7 @@
     <h3><b>งานที่สมัคร</b></h3>
     <% if (!history || !resume) { %>
         <div style="justify-content: center;" class="d-flex">
-            <h1>No Jobs Ended</h1>
+            <h1>กรุณาเพิ่มเรซูเม่</h1>
         </div>
     <% } else { %>
             <% if (history.length> 0) { %>
