--- a/views/changepassword.ejs
+++ b/views/changepassword.ejs
@@ -14,174 +14,61 @@
     <%- include('navbar') %>
     <!-- <h1>Request Password Reset</h1> -->
     <% if(user) { %>
-        <div style="background-color: rgb(219, 218, 218); height: 100vh;">
-            <div class="container py-5 h-100" >
-              <p class="label-profile2"><b>Password</b></p>
-              <div class="row" style="justify-content:center ;">        
-                <div class="col-lg-6">
-                  <div class="card  p-5 " >
-                  <div class="card">
-                    <div class="card-body">
-                        <form action="/user/changepassword/<%= user.id_user %>" method="post">
-                      <div class="row">
-                        <div class="col-sm-5">
-                          <p class="mb-0" style="margin-left: 4vh; margin-top: 1vh;">OTP</p>
-                        </div>
-                        <div class="col-sm-4">
-                            <input type="text" name="otp" id="otp"  placeholder="otp"required/>
-                        </div>
-                      </div>
-                      <hr>
-                      <div class="row">
-                        <div class="col-sm-5">
-                          <p class="mb-0" style="margin-left: 4vh; margin-top: 1vh;">Password</p>
-                        </div>
-                        <div class="col-sm-4">
-                            <input type="password" name="password" id="password"  placeholder="New Password"required/>
-                        </div>
-                      </div>
-                      <hr>
-                      <div class="row">
-                        <div class="col-sm-5">
-                          <p class="mb-0" style="margin-left: 4vh; margin-top: 1vh;">Confirmpassword</p>
-                        </div>
-                        <div class="col-sm-4">
-                            <input type="password" name="confirmpassword" id="confirmpassword"  placeholder="Confirm Password"required/>
-                        </div>
-                      </div>
-                      <hr>
-                      <button type="submit" class="btn btn-outline-primary" style="margin-left: 60vh;"  data-mdb-ripple-color="dark">save</button>
-                      <!-- <button type="submit" class="btn btn-primary">save</button> -->
-                    </form>
-                    </div>
-                  </div>
-                </div>
-                </div>
-              </div>
-            </div>
-          </div>
-
-        <!-- <form action="/user/changepassword/<%= user.id_user %>" method="post">
-                    
-            <label for="text">OTP:</label>
-            <input type="text" name="otp" id="otp" value="" placeholder="otp"/>
-                        
-            <label for="password">password:</label>
-            <input type="password" name="password" id="password" value="" placeholder="New Password"/>
-
-            <label for="password">confirmpassword:</label>
-        <input type="password" name="confirmpassword" id="confirmpassword" value="" placeholder="Confirm Password"/>
-        <button type="submit">Submit</button>
-        </form> -->
+      <div class="container d-flex  justify-content-center align-items-center"
+      style="min-height: 100vh;background-color: #F1F1F1;padding: 20px;">
+      <div class="card col-md-8" style="padding:20px;">
+        <div class="text-center justify-content-center mb-2">
+          <b>เปลี่ยนรหัสผ่านuser</b>
+        </div>
+        <form action="/user/changepassword/<%= user.id_user %>" method="post">
+          <input type="text" name="otp" id="otp" class="form-control form-spacing" placeholder="otp" />
+          <input type="password" name="password" id="password" class="form-control form-spacing"
+            placeholder="New Password" />
+          <input type="password" name="confirmpassword" id="confirmpassword" class="form-control form-spacing"
+            placeholder="Confirm Password" />
+          <button type="submit"
+            style="background-color: #ED2A30;color: white; width: 100%; margin-top: 20px;">ยืนยัน</button>
+        </form>
+      </div>
+    </div>
        <% } else if (company) { %>
-
-        <div style="background-color: rgb(219, 218, 218); height: 100vh;">
-            <div class="container py-5 h-100" >
-              <p class="label-profile"><b>Password</b></p>
-
-              <div class="row" style="justify-content:center ;">
-            
-                <div class="col-lg-6">
-                  <div class="card  p-5 " >
-                  <div class="card">
-                    <div class="card-body">
-                        <form action="/company/changepassword/<%= company.id_company %>" method="post">
-                      <div class="row">
-                        <div class="col-sm-5">
-                          <p class="mb-0" style="margin-left: 4vh; margin-top: 1vh;">OTP</p>
-                        </div>
-                        <div class="col-sm-4">
-                            <input type="text" name="otp" id="otp"  placeholder="otp"required/>
-                        </div>
-                      </div>
-                      <hr>
-                      <div class="row">
-                        <div class="col-sm-5">
-                          <p class="mb-0" style="margin-left: 4vh; margin-top: 1vh;">Password</p>
-                        </div>
-                        <div class="col-sm-4">
-                            <input type="password" name="password" id="password"  placeholder="New Password"required/>
-                        </div>
-                      </div>
-                      <hr>
-                      <div class="row">
-                        <div class="col-sm-5">
-                          <p class="mb-0" style="margin-left: 4vh; margin-top: 1vh;">Confirmpassword</p>
-                        </div>
-                        <div class="col-sm-4">
-                            <input type="password" name="confirmpassword" id="confirmpassword"  placeholder="Confirm Password"required/>
-                        </div>
-                      </div>
-                      <hr>
-                      <button type="submit" class="btn btn-outline-primary" style="margin-left: 60vh ;" data-mdb-ripple-color="dark">save</button>
-                      
-                    </div>
-                  </div>
-                </div>
-                </div>
-              </div>
-            </div>
+        <div class="container d-flex  justify-content-center align-items-center"
+        style="min-height: 100vh;background-color: #F1F1F1;padding: 20px;">
+        <div class="card col-md-8" style="padding:20px;">
+          <div class="text-center justify-content-center mb-2">
+            <b>เปลี่ยนรหัสผ่านcompany</b>
           </div>
-
- <!-- <div style="background-color: rgb(219, 218, 218); height: 100vh;">
-    <div class="container py-5 h-100" >
-      <p class="label-profile">Password</p>
-        <form action="/company/changepassword/<%= company.id_company %>" method="post">
-            <label for="otp">OTP:</label>
-            <input type="otp" name="otp" id="otp" required>
-
-            <label for="password">password:</label>
-            <input type="password" name="password" id="password" value="" placeholder="New Password"/>
-
-            <label for="password">confirmpassword:</label>
-        <input type="password" name="confirmpassword" id="confirmpassword" value="" placeholder="Confirm Password"/>
-
-            <label for="email">Email:</label>
-            <input type="email" name="email" id="email" required>
-            <button type="submit">Submit</button>
-        </form> -->
+          <form action="/company/changepassword/<%= company.id_company %>" method="post">
+            <input type="text" name="otp" id="otp" class="form-control form-spacing" placeholder="otp" />
+            <input type="password" name="password" id="password" class="form-control form-spacing"
+              placeholder="New Password" />
+            <input type="password" name="confirmpassword" id="confirmpassword" class="form-control form-spacing"
+              placeholder="Confirm Password" />
+            <button type="submit"
+              style="background-color: #ED2A30;color: white; width: 100%; margin-top: 20px;">ยืนยัน</button>
+          </form>
+        </div>
+      </div>
        <% }else { %>
-
-        <div style="background-color: rgb(219, 218, 218); height: 100vh;">
-            <div class="container py-5 h-100" >
-              <p class="label-profile"><b>Password</b></p>
-
-                <div class="row" style="justify-content:center ;">
-                  
-                  <div class="col-lg-6">
-                    <div class="card  p-5 " >
-                    <div class="card">
-                      <div class="card-body">
-                       
-                        <div class="row">
-                          <div class="col-sm-3">
-                            <p class="mb-0"  style="margin-left: 4vh; margin-top: 1vh;">Password</p>
-                          </div>
-                          <div class="col-sm-9">
-                            <input type="password" name="password" id="password"  placeholder="New Password"/>
-                          </div>
-                        </div>
-                        <hr>
-                        <div class="row">
-                            <div class="col-sm-5">
-                              <p class="mb-0" style="margin-left: 4vh; margin-top: 1vh;">Confirmpassword</p>
-                            </div>
-                            <div class="col-sm-4">
-                                <input type="password" name="confirmpassword" id="confirmpassword"  placeholder="Confirm Password"/>
-                            </div>
-                          </div>
-                          <hr>
-                        <button type="submit" class="btn btn-primary">save</button>
-                      </form>
-                      </div>
-                    </div>
-                  </div>
-                  </div>
-                </div>
+        <div class="container d-flex  justify-content-center align-items-center"
+        style="min-height: 100vh;background-color: #F1F1F1;padding: 20px;">
+        <div class="card col-md-8" style="padding:20px;">
+          <div class="text-center justify-content-center mb-2">
+            <b>เปลี่ยนรหัสผ่านไม่มีผู้ใช้หรือเป็นแอดมิน</b>
+          </div>
+          <form action="/forgetchangepassword/" method="post">
+            <input type="text" name="otp" id="otp" class="form-control form-spacing" placeholder="otp" />
+            <input type="password" name="password" id="password" class="form-control form-spacing"
+              placeholder="New Password" />
+            <input type="password" name="confirmpassword" id="confirmpassword" class="form-control form-spacing"
+              placeholder="Confirm Password" />
+            <button type="submit"
+              style="background-color: #ED2A30;color: white; width: 100%; margin-top: 20px;">ยืนยัน</button>
+          </form>
+        </div>
+      </div>
 
 
-        <!-- <input type="password" name="password" id="password" value="" placeholder="New Password" />
-        <input type="password" name="confirmpassword" id="confirmpassword" value="" placeholder="Confirm Password" /> -->
         <% } %>
 </body>
 
