--- a/views/forget.ejs
+++ b/views/forget.ejs
@@ -9,50 +9,34 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"crossorigin="anonymous"></script>
   <link rel="stylesheet" href="/css/style.css">
 </head>
+<style>
+  .outer-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100vw;
+    height: 90vh;
+    background-color: rgb(255, 255, 255);
+  }
 
+  .inner-container {
+    text-align: center;
+  }
+</style>
 <body>
   <%- include('navbar') %>
-  <div style="background-color: rgb(219, 218, 218); height: 100vh;">
-    <div class="container py-5 h-100" >
-      <p class="label-profile4"><b>Password</b></p>
-
-      <div class="row" style="justify-content:center ;">
-            
-        <div class="col-lg-6">
-          <div class="card  p-5 " >
-          <div class="card">
-            <div class="card-body">
-              <form action="/forget/:email" method="post">
-              <div class="row">
-                <div class="col-sm-3">
-                  <p class="mb-0" style="margin-left: 4vh; margin-top: 1vh;">Email</p>
-                </div>
-                <div class="col-sm-9">
-                  <input type="email" id="email" name="email" placeholder="Enter Email" required/>
-                </div>
-              </div>
-              <hr>
-              <button type="submit" class="btn btn-primary">save</button>
-            </form>
-            </div>
-          </div>
-        </div>
-        </div>
-      </div>
+  <div class="outer-container">
+    <div class="inner-container">
+      <p style="font-size: 20px;"><strong>เปลี่ยนรหัสผ่าน</strong></p>
+      <span style="color: #817E7E;">เมื่อคุณกด 'บันทึก' ระบบจะทำการส่ง OTP ไปที่อีเมลคุณ</span>
+      <form action="/forget/:email" method="post">
+        <input type="email" id="email" class="form-control mt-3" name="email" placeholder="กรอก Email"
+          required />
+          <button type="submit" style="background-color: #ED2A30;color: white; width: 100%; margin-top: 20px;">ยืนยัน</button>
+      </form>
     </div>
-  </div>
+  </div> 
 
-        <!-- <form action="/forget/:email" method="post">
-
-          <div class="inputbox-regis">
-            <label for="email">email</label>
-            <input type="email" id="email" name="email" placeholder="Enter Email"/>
-          </div>
-          <button type="submit" class="btn btn-primary">save</button>
-
-
-
-        </form> -->
 </body>
 
 </html>
