--- a/views/forgetchangepassword.ejs
+++ b/views/forgetchangepassword.ejs
@@ -2,225 +2,74 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="/css/style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+    crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="/css/style.css">
 </head>
 
 <body>
-    <%- include('navbar') %>
-    <!-- <h1>Request Password Reset</h1> -->
+  <%- include('navbar') %>
     <% if(user) { %>
-        <div style="background-color: rgb(219, 218, 218); height: 100vh;">
-            <div class="container py-5 h-100" >
-              <p class="label-profile5"><b>Password</b></p>
-              <div class="row" style="justify-content:center ;">
-            
-                <div class="col-lg-6">
-                  <div class="card  p-5 " >
-                  <div class="card">
-                    <div class="card-body">
-                        <form action="/forgetchangepassword/<%= user.id_user %>" method="post">
-                      <div class="row">
-                        <div class="col-sm-5">
-                          <p class="mb-0" style="margin-left: 4vh; margin-top: 1vh;">OTP</p>
-                        </div>
-                        <div class="col-sm-4">
-                            <input type="text" name="otp" id="otp"  placeholder="otp" required/>
-                        </div>
-                      </div>
-                      <hr>
-                      <div class="row">
-                        <div class="col-sm-5">
-                          <p class="mb-0" style="margin-left: 4vh; margin-top: 1vh;">Password</p>
-                        </div>
-                        <div class="col-sm-4">
-                            <input type="password" name="password" id="password"  placeholder="New Password"required/>
-                        </div>
-                      </div>
-                      <hr>
-                      <div class="row">
-                        <div class="col-sm-5">
-                          <p class="mb-0" style="margin-left: 4vh; margin-top: 1vh;">Confirmpassword</p>
-                        </div>
-                        <div class="col-sm-4">
-                            <input type="password" name="confirmpassword" id="confirmpassword"  placeholder="Confirm Password"required/>
-                        </div>
-                      </div>
-                      <hr>
-                      <button type="submit" class="btn btn-outline-primary" style="margin-left: 60vh ;" data-mdb-ripple-color="dark">save</button>
-                      
-                    </div>
-                  </div>
-                </div>
-                </div>
+      <div class="container d-flex  justify-content-center align-items-center"
+        style="min-height: 100vh;background-color: #F1F1F1;padding: 20px;">
+        <div class="card col-md-8" style="padding:20px;">
+          <div class="text-center justify-content-center mb-2">
+            <b>เปลี่ยนรหัสผ่านuser</b>
+          </div>
+          <form action="/forgetchangepassword/<%= user.id_user %>" method="post">
+            <input type="text" name="otp" id="otp" class="form-control form-spacing" placeholder="otp" />
+            <input type="password" name="password" id="password" class="form-control form-spacing"
+              placeholder="New Password" />
+            <input type="password" name="confirmpassword" id="confirmpassword" class="form-control form-spacing"
+              placeholder="Confirm Password" />
+            <button type="submit"
+              style="background-color: #ED2A30;color: white; width: 100%; margin-top: 20px;">ยืนยัน</button>
+          </form>
+        </div>
+      </div>
+      <% } else if (company) { %>
+        <div class="container d-flex  justify-content-center align-items-center"
+          style="min-height: 100vh;background-color: #F1F1F1;padding: 20px;">
+          <div class="card col-md-8" style="padding:20px;">
+            <div class="text-center justify-content-center mb-2">
+              <b>เปลี่ยนรหัสผ่านcompany</b>
+            </div>
+            <form action="/forgetchangepassword/<%= company.id_company %>" method="post">
+              <input type="text" name="otp" id="otp" class="form-control form-spacing" placeholder="otp" />
+              <input type="password" name="password" id="password" class="form-control form-spacing"
+                placeholder="New Password" />
+              <input type="password" name="confirmpassword" id="confirmpassword" class="form-control form-spacing"
+                placeholder="Confirm Password" />
+              <button type="submit"
+                style="background-color: #ED2A30;color: white; width: 100%; margin-top: 20px;">ยืนยัน</button>
+            </form>
+          </div>
+        </div>
+        <% }else { %>
+          <div class="container d-flex  justify-content-center align-items-center"
+            style="min-height: 100vh;background-color: #F1F1F1;padding: 20px;">
+            <div class="card col-md-8" style="padding:20px;">
+              <div class="text-center justify-content-center mb-2">
+                <b>เปลี่ยนรหัสผ่าน no user</b>
               </div>
+              <form action="/forgetchangepassword/" method="post">
+                <input type="text" name="otp" id="otp" class="form-control form-spacing" placeholder="otp" />
+                <input type="password" name="password" id="password" class="form-control form-spacing"
+                  placeholder="New Password" />
+                <input type="password" name="confirmpassword" id="confirmpassword" class="form-control form-spacing"
+                  placeholder="Confirm Password" />
+                <button type="submit"
+                  style="background-color: #ED2A30;color: white; width: 100%; margin-top: 20px;">ยืนยัน</button>
+              </form>
             </div>
           </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-        <!-- <form action="/forgetchangepassword/<%= user.id_user %>" method="post">
-
-            <label for="text">OTP:</label>
-            <input type="text" name="otp" id="otp" value="" placeholder="otp" />
-
-            <label for="password">password:</label>
-            <input type="password" name="password" id="password" value="" placeholder="New Password" />
-
-            <label for="password">confirmpassword:</label>
-            <input type="password" name="confirmpassword" id="confirmpassword" value=""
-                placeholder="Confirm Password" />
-            <button type="submit">Submit</button>
-        </form> -->
-        <% } else if (company) { %>
-
-
-
-
-            <div style="background-color: rgb(219, 218, 218); height: 100vh;">
-                <div class="container py-5 h-100" >
-                  <p class="label-profile"><b>Password</b></p>
-    
-    
-    
-                  <div class="row" style="justify-content:center ;">
-                
-                    <div class="col-lg-6">
-                      <div class="card  p-5 " >
-                      <div class="card">
-                        <div class="card-body">
-                            <form action="/forgetchangepassword/<%= company.id_company %>" method="post">
-                          <div class="row">
-                            <div class="col-sm-5">
-                              <p class="mb-0" style="margin-left: 4vh; margin-top: 1vh;">OTP</p>
-                            </div>
-                            <div class="col-sm-4">
-                                <input type="text" name="otp" id="otp"  placeholder="otp"/>
-                            </div>
-                          </div>
-                          <hr>
-                          <div class="row">
-                            <div class="col-sm-5">
-                              <p class="mb-0" style="margin-left: 4vh; margin-top: 1vh;">Password</p>
-                            </div>
-                            <div class="col-sm-4">
-                                <input type="password" name="password" id="password"  placeholder="New Password"/>
-                            </div>
-                          </div>
-                          <hr>
-                          <div class="row">
-                            <div class="col-sm-5">
-                              <p class="mb-0" style="margin-left: 4vh; margin-top: 1vh;">Confirmpassword</p>
-                            </div>
-                            <div class="col-sm-4">
-                                <input type="password" name="confirmpassword" id="confirmpassword"  placeholder="Confirm Password"/>
-                            </div>
-                          </div>
-                          <hr>
-                          <button type="submit" class="btn btn-outline-primary" style="margin-left: 60vh ;" data-mdb-ripple-color="dark">save</button>
-                          
-                        </div>
-                      </div>
-                    </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-
-            <!-- <form action="/forgetchangepassword/<%= company.id_company %>" method="post">
-                <label for="text">OTP:</label>
-                <input type="text" name="otp" id="otp" value="" placeholder="otp" />
-
-                <label for="password">password:</label>
-                <input type="password" name="password" id="password" value="" placeholder="New Password" />
-
-                <label for="password">confirmpassword:</label>
-                <input type="password" name="confirmpassword" id="confirmpassword" value=""
-                    placeholder="Confirm Password" />
-                <button type="submit">Submit</button>
-            </form> -->
-            <% }else { %>
-                <div style="background-color: rgb(219, 218, 218); height: 100vh;">
-                    <div class="container py-5 h-100" >
-                      <p class="label-profile"><b>Password</b></p>
-        
-        
-        
-                      <div class="row" style="justify-content:center ;">
-                    
-                        <div class="col-lg-6">
-                          <div class="card  p-5 " >
-                          <div class="card">
-                            <div class="card-body">
-                                <form action="/forgetchangepassword/" method="post">
-                              <div class="row">
-                                <div class="col-sm-5">
-                                  <p class="mb-0" style="margin-left: 4vh; margin-top: 1vh;">OTP</p>
-                                </div>
-                                <div class="col-sm-4">
-                                    <input type="text" name="otp" id="otp"  placeholder="otp"/>
-                                </div>
-                              </div>
-                              <hr>
-                              <div class="row">
-                                <div class="col-sm-5">
-                                  <p class="mb-0" style="margin-left: 4vh; margin-top: 1vh;">Password</p>
-                                </div>
-                                <div class="col-sm-4">
-                                    <input type="password" name="password" id="password"  placeholder="New Password"/>
-                                </div>
-                              </div>
-                              <hr>
-                              <div class="row">
-                                <div class="col-sm-5">
-                                  <p class="mb-0" style="margin-left: 4vh; margin-top: 1vh;">Confirmpassword</p>
-                                </div>
-                                <div class="col-sm-4">
-                                    <input type="password" name="confirmpassword" id="confirmpassword"  placeholder="Confirm Password"/>
-                                </div>
-                              </div>
-                              <hr>
-                              <button type="submit" class="btn btn-outline-primary" style="margin-left: 60vh ;" data-mdb-ripple-color="dark">save</button>
-                              
-                            </div>
-                          </div>
-                        </div>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-
-                <!-- <form action="/forgetchangepassword/" method="post">
-                    <label for="text">OTP:</label>
-                    <input type="text" name="otp" id="otp" value="" placeholder="otp" />
-
-                    <label for="password">password:</label>
-                    <input type="password" name="password" id="password" value="" placeholder="New Password" />
-
-                    <label for="password">confirmpassword:</label>
-                    <input type="password" name="confirmpassword" id="confirmpassword" value=""
-                        placeholder="Confirm Password" />
-                    <button type="submit">Submit</button>
-                </form> -->
-                <% } %>
+          <% } %>
 </body>
 
 </html>
