fix: user detailjob jobsendcard resume

--- a/views/jobsendcard.ejs
+++ b/views/jobsendcard.ejs
@@ -1,7 +1,7 @@
 <div class="container mt-5" style="background-color: #F1F1F1;">
     <h3><b>งานที่สมัคร</b></h3>
     <% if (!history || !resume) { %>
-        <div style="justify-content: center;" class="d-flex">
+        <div style="justify-content: center;height: 100vh;" class="d-flex">
             <h1>กรุณาเพิ่มเรซูเม่</h1>
         </div>
     <% } else { %>
