--- a/views/resume.ejs
+++ b/views/resume.ejs
@@ -34,7 +34,7 @@
     .custom-list-item {
       list-style-type: none;
       /* ลบจุดหน้ารายการ */
-      color: blue;
+      color: rgb(255, 0, 0);
       background-color: lightgray;
       font-weight: bold;
       /* เพิ่มสไตล์อื่น ๆ ตามต้องการ */
