--- a/views/detailjob.ejs
+++ b/views/detailjob.ejs
@@ -6,8 +6,11 @@
   <meta http-equiv="X-UA-Compatible" content="chrome">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>registerUser</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"crossorigin="anonymous"></script>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+    crossorigin="anonymous"></script>
   <link rel="stylesheet" href="/css/style.css">
 </head>
 
@@ -15,157 +18,186 @@
   <!-- คิดว่าหน้านี้จะใช้สำหรับโชว์รายละเอียดและใส่เงื่อนไขเข้าไปเพื่ออัพเดต -->
   <%- include('navbar') %>
 
-  <% if(locals.errors){ %>
-    <% Object.values(errors).forEach(function(error){%>
-      <script type="text/javascript">
-        Swal.fire({
-          title: "<%= error.msg || errors  %>",
-          icon: 'warning',
-        })
-      </script>
-      <%})%>
-        <%} else if (locals.success) { %>
-          <script type="text/javascript">
-            Swal.fire({
-              title: "<%= success  %>",
-              icon: 'success',
-            })
-          </script>
-          <%}%>
-
-    <div class="container-fluid mb-5">
-      <div class="pt-5 ps-5">
-        <h6 class="label-profile3 text-dark-50"></h6>
-        </div>
-        <div class="row" style="justify-content:center ;">
-          <div class="col-3  p-4 border bg-light" style="margin-top:1vh ;">
-            <div class="card  text-center" style="width: 15rem;">
-              <img class="card-img-top" src="/image/<%= job.image %>" alt="Card image cap">
-              <div class="card-body">
-                <p class="card-text">
-                  <%= job.name_company %>
-                </p>
-              </div>
-            </div>
-          </div>
-          <div class="col-sm-8 p-4 border bg-light " style="margin-top:1vh ;">
-            <div class="card" style="height: 100%;">
-              <div class="card-body">
-                <h5 class="card-title">
-                  <b><%= job.name_job %></b>
-                </h5>
-                <p class="card-text">
-                  <%= job.detail_work %>
-                </p>
-                <small class="card-text" style="color: #0800ff;">
-                  <b>หมดเขต : <%= job.deadline_offer %></b>
-                </small>
-                  <% if(user) { %>
-                <form action="/user/apply/<%= user.id_user %>/<%= job.idjob_company %>" method="post">
-                  <div class="inputbox-regis">
-                    <input type="hidden" id="id_user" name="id_user" value="<%= user.id_user %>" />
-                  </div>
-                  <div class="inputbox-regis">
-                    <ion-icon name="mail-outline"></ion-icon>
-                    <input type="hidden" id="idjob_company" name="idjob_company" value="<%= job.idjob_company %>" />
-                  </div>
-                  <button type="submit" class="btn btn-success fixed-button1" style=" width: 100%;"
-                    data-mdb-ripple-color="dark"><b>Apply Job</b></button>
-                </form>
-                <script>
-                  document.querySelector('.fixed-button1').addEventListener('click', function (event) {
-                    event.preventDefault(); // Prevent the default form submission behavior
-                    fetch('/user/apply/<%= user.id_user %>/<%= job.idjob_company %>', {
-                      method: 'POST',
-                      // Add the data you want to send here
-                      body: JSON.stringify({}),
-                      headers: {
-                        'Content-Type': 'application/json',
-                      },
-                    })
-                      .then(response => response.json())
-                      .then(data => {
-                        if (data.status === "error") {
-                          Swal.fire({
-                            title: "Error",
-                            text: data.error,
-                            icon: "error",
-                          });
-                        } else {
-                            Swal.fire({
-                            title: "Apply for work",
-                            text: data.status,
-                            icon: "success",
-                          });
-                        }
-                      })
-                      .catch(error => {
-                        console.error("An error occurred:", error);
-                      });
-                  });
-                </script>
-
-                      <% } else if(company || admin) { %>
-                      <% } else { %>
-                          <button onclick="lessondelete()" type="button" class="btn btn-success fixed-button1" style=" width: 100%;">
-                            <b>Apply Job</b>
-                          </button>
-                        <% }%>
-              </div>
-            </div>
-            <!-- </div> -->
-          </div>
-        </div>
-        <div class="row p-5 m-1" style=" margin-top: 5vh;">
-          <h6 class="label-profile text-dark-50 mb-4">งาน</h6>
-          <div class="card mb-3">
-            <div class="card-header">
-              เงินเดือน :
-            </div>
-            <div class="card-body">
-              <blockquote class="blockquote mb-0">
-                <p><%= job.salary %></p>
-              </blockquote>
-            </div>
-          </div>
-          <div class="card  mb-3">
-            <div class="card-header">
-              ตำแหน่ง :
-            </div>
-            <div class="card-body">
-              <blockquote class="blockquote mb-0">
-                <p><%= job.role %></p>
-              </blockquote>
-            </div>
-          </div>
-          <div class="card  mb-3">
-            <div class="card-header">
-              เพศ : 
-            </div>
-            <div class="card-body">
-              <blockquote class="blockquote mb-0">
-                <p><%= job.gender%></p>
-              </blockquote>
-            </div>
-          </div>
-        </div>
-      </div>
-      <script type="text/javascript">
-        function lessondelete() {
+    <% if(locals.errors){ %>
+      <% Object.values(errors).forEach(function(error){%>
+        <script type="text/javascript">
           Swal.fire({
-            title: 'กรุณาเข้าสู่ระบบเพื่อใช้งาน',
+            title: "<%= error.msg || errors  %>",
             icon: 'warning',
-            showClass: {
-              popup: 'animate__animated animate__fadeInDown'
-            },
-            hideClass: {
-              popup: 'animate__animated animate__fadeOutUp'
-            },
-            footer: '<h5><a style="text-decoration: none;" href="/login">Login /</a></h5><h5><a style="text-decoration: none;" href="/registerUser">&nbsp;Register</a></h5>'
           })
-        };
-      </script>
-      <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.7.3/dist/sweetalert2.all.min.js"></script>
+        </script>
+        <%})%>
+          <%} else if (locals.success) { %>
+            <script type="text/javascript">
+              Swal.fire({
+                title: "<%= success  %>",
+                icon: 'success',
+              })
+            </script>
+            <%}%>
+
+              <div class="container-fluid mb-5 d-flex mt-5">
+                <div class="row " style="justify-content:center ;">
+                  <div class="col-3  p-4 border"
+                    style="margin-top:1vh ;background-color: #ffffff;box-shadow: 0 4px 8px rgba(255, 0, 0, 0.3);">
+                    <div class="card  text-center d-flex justify-content-between" style=" height: 100%; border: none;">
+                      <img class="card-img-top" src="/image/<%= job.image %>" alt="Card image cap" style="align-self: center;margin-top: auto;margin-bottom: auto;width: 300px;height: 300px;">
+                      <div class="card-body" style="display: flex;flex-direction: column;justify-content: flex-end;height: 100%;">
+                        <h5>
+                          <b class="card-text align-items-end">
+                          <%= job.name_company %>
+                          </b>
+                      </h5>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-sm-8 p-4 border"
+                    style="margin-top:1vh ;background-color: #ffffff;box-shadow: 0 4px 8px rgba(255, 0, 0, 0.3);">
+                    <div class="card" style="height: 100%; border: none;">
+                      <div class="card-body">
+                        <div style="display: flex; justify-content:space-between;">
+                          <h5 class="card-title " style="color: red;">
+                            <b>
+                              <%= job.name_job %>
+                            </b>
+                          </h5>
+                          <div style="display: flex; align-items: center;">
+                            <box class="index-card-text"
+                              style="color: #ff0000; background-color: #FFDBDB; padding: 5px; padding-left: 15px; padding-right: 15px; border-radius: 3px;">
+                              หมดเขต
+                            </box>
+                            <b class="ms-3" style="color: #767F8C;" id="formatted-deadline-"
+                              data-deadline="<%= job.deadline_offer %>">
+                            </b>
+                          </div>
+                        </div>
+                        <div class="d-flex flex-row pt-3 " style="background-color: #ffffff;">
+                          <div class="d-flex flex-column p-3 " style="background-color: #FBB7B9; width: 15%;">
+                            <div class="ms-auto me-auto">
+                              <p>เงินเดือน</p>
+                              <p>ตำแหน่ง</p>
+                              <p>เพศ</p>
+                            </div>
+                          </div>
+                          <div class="d-flex flex-column p-3" style="background-color: #FFE2E3; width: 90%;">
+                            <div class="ms-3">
+                              <p>
+                                <%= job.salary %>
+                              </p>
+                              <p>
+                                <%= job.role %>
+                              </p>
+                              <p>
+                                <%= job.gender%>
+                              </p>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="p-4">
+                        <p class="card-text" style="color: #6D6D6D;">
+                          <%= job.detail_work %>
+                        </p>
+                      </div>
+
+                      <% if(user) { %>
+                        <form action="/user/apply/<%= user.id_user %>/<%= job.idjob_company %>" method="post">
+                          <div class="inputbox-regis">
+                            <input type="hidden" id="id_user" name="id_user" value="<%= user.id_user %>" />
+                          </div>
+                          <div class="inputbox-regis">
+                            <ion-icon name="mail-outline"></ion-icon>
+                            <input type="hidden" id="idjob_company" name="idjob_company"
+                              value="<%= job.idjob_company %>" />
+                          </div>
+                          <button type="submit" class="btn "
+                            style=" width: 100%;color: #eeeeee ; background-color: #ED2A30;"
+                            data-mdb-ripple-color=" dark"><b>สมัครงาน</b></button>
+                        </form>
+                        <script>
+                          document.querySelector('.btn').addEventListener('click', function (event) {
+                            event.preventDefault(); // Prevent the default form submission behavior
+                            fetch('/user/apply/<%= user.id_user %>/<%= job.idjob_company %>', {
+                              method: 'POST',
+                              // Add the data you want to send here
+                              body: JSON.stringify({}),
+                              headers: {
+                                'Content-Type': 'application/json',
+                              },
+                            })
+                              .then(response => response.json())
+                              .then(data => {
+                                if (data.status === "error") {
+                                  Swal.fire({
+                                    title: "เกิดข้อผิดพลาด",
+                                    text: data.error,
+                                    icon: "error",
+                                  });
+                                } else {
+                                  Swal.fire({
+                                    title: "สำเร็จ",
+                                    text: data.success,
+                                    icon: "success",
+                                  });
+                                }
+                              })
+                              .catch(error => {
+                                console.error("An error occurred:", error);
+                              });
+                          });
+                        </script>
+
+                        <% } else if(company || admin) { %>
+                          <% } else { %>
+                            <button onclick="lessondelete()" type="button" class="btn w-100"
+                              style=" width: 100%;color: #eeeeee ; background-color: #ED2A30;">
+                              <b>สมัครงาน</b>
+                            </button>
+                            <% }%>
+                    </div>
+                  </div>
+                  <!-- </div> -->
+                </div>
+              </div>
+
+              </div>
+              <script type="text/javascript">
+                function lessondelete() {
+                  Swal.fire({
+                    title: 'กรุณาเข้าสู่ระบบเพื่อใช้งาน',
+                    icon: 'warning',
+                    showClass: {
+                      popup: 'animate__animated animate__fadeInDown'
+                    },
+                    hideClass: {
+                      popup: 'animate__animated animate__fadeOutUp'
+                    },
+                    footer: '<h5><a style="text-decoration: none;" href="/login">Login /</a></h5><h5><a style="text-decoration: none;" href="/registerUser">&nbsp;Register</a></h5>'
+                  })
+                };
+              </script>
+              <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.7.3/dist/sweetalert2.all.min.js"></script>
+              <script>
+                function formatDateTime(dateTimeStr) {
+                  const date = new Date(dateTimeStr);
+                  const day = String(date.getDate()).padStart(2, '0');
+                  const month = String(date.getMonth() + 1).padStart(2, '0');
+                  const year = date.getFullYear();
+                  const hours = String(date.getHours()).padStart(2, '0');
+                  const minutes = String(date.getMinutes()).padStart(2, '0');
+
+                  return `${day}/${month}/${year} เวลา ${hours}:${minutes}`;
+                }
+
+                // Get all elements with a specific class or ID
+                document.addEventListener('DOMContentLoaded', function () {
+                  const deadlineElements = document.querySelectorAll('[id^="formatted-deadline-"]');
+                  deadlineElements.forEach(function (el) {
+                    const deadlineOffer = el.getAttribute('data-deadline');
+                    el.textContent = formatDateTime(deadlineOffer);
+                  });
+                });
+              </script>
 </body>
 
 </html>
